LPD-31593 Apply to usages, no longer need to specify CLDR