@@ -24,7 +24,6 @@ import org.junit.Test;
  * @author Mariano Álvaro Sáiz
  */
 @NewEnv(type = NewEnv.Type.JVM)
-@NewEnv.JVMArgsLine("-Djava.locale.providers=CLDR")
 public class NumericDDMFormFieldUtilTest {
 
 	@ClassRule
